Fix name overflow

--- a/trivia.css
+++ b/trivia.css
@@ -31,16 +31,11 @@ body {
 
 }
 
-#toWin {
-    font-size: 16px;
-    height: 7%;
-}
-
 .sidebar_style {
     text-align: center;
     padding: 0;
     border-radius: 10px;
-    height: 10%;
+    /*height: 10%;*/
     width: 50%;
     margin: auto;
     margin-top: 30px;
@@ -50,6 +45,8 @@ body {
     font-style: italic;
     font-size: 20px;
     background-color: rgba(50, 50, 50, .95);
+    word-wrap: break-word;
+    font-size: 20px;
 }
 
 .score {
@@ -60,7 +57,6 @@ body {
 }
 
 #DJ1, #DJ2 {
-    height: 10%;
     width: 50%;
     text-align: center;
     margin: auto;
@@ -68,14 +64,31 @@ body {
     color: white;
     font-weight: bolder;
     font-style: italic;
-    font-size: 25px;
+    font-size: 22px;
     box-shadow: 0 0 0 black;
+    height: 10%;
+}
 
+#resetGame {
+    height: 9%;
+}
+
+#resetGame:hover {
+    cursor: pointer;
+}
+
+#toWin {
+    font-size: 16px;
+    height: 7%;
 }
 
 .score_number, .player_turn {
     height: 100%;
     border: 3px solid black;
+}
+
+.Player_turn {
+    min-height: 10%;
 }
 
 .gamesquare {
@@ -332,10 +345,6 @@ h1 {
     font-weight: bolder;
     font-style: italic;
     font-size: 50px;
-}
-
-#resetGame:hover {
-    cursor: pointer;
 }
 
 .trivia {
